# rpclib

./: CMakeLists.txt
cmake/localbuild/: Findrpclib.cmake
examples/calculator/: CMakeLists.txt
examples/client/: CMakeLists.txt
examples/echo/: CMakeLists.txt  echo_client.cc  echo_server.cc
include/rpc/: client.h  dispatcher.h  rpc_error.h  server.h  this_handler.h  this_session.h
include/rpc/detail/: async_writer.h  call.h  func_traits.h  log.h  make_unique.h  response.h  server_session.h
include/rpc/msgpack/: fbuffer.h  pack.h  pack_template.h  sbuffer.h  sysdep.h  unpack.h  unpack_template.h  vrefbuffer.h  zbuffer.h  zone.h
include/rpc/msgpack/predef/architecture/: x86.h
include/rpc/msgpack/predef/architecture/x86/: b32.h  b64.h
include/rpc/msgpack/predef/compiler/: visualc.h
include/rpc/msgpack/predef/detail/: test_def.h
include/rpc/msgpack/predef/hardware/: simd.h
include/rpc/msgpack/predef/hardware/simd/: x86_amd.h
include/rpc/msgpack/predef/platform/: windows_desktop.h  windows_phone.h  windows_runtime.h  windows_store.h
tests/rpc/: client_test.cc
